[gd_scene load_steps=24 format=2]

[ext_resource path="res://Level/Level.gd" type="Script" id=1]
[ext_resource path="res://Door/Door.tscn" type="PackedScene" id=2]
[ext_resource path="res://Level/UI.tscn" type="PackedScene" id=3]
[ext_resource path="res://Level/Heaven-Sheet.png" type="Texture" id=4]
[ext_resource path="res://Level/demonLaugh1.wav" type="AudioStream" id=5]
[ext_resource path="res://Level/shortChoir2.wav" type="AudioStream" id=6]
[ext_resource path="res://Level/bg.wav" type="AudioStream" id=7]
[ext_resource path="res://Level/fire.wav" type="AudioStream" id=8]

[sub_resource type="Animation" id=1]
resource_name = "DoorClose"
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 18, 18, 19, 20, 21, 22, 23, 24, 25, 26 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "set_animation_running"
} ]
}

[sub_resource type="Animation" id=2]
resource_name = "DoorOpen"
length = 1.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "set_animation_running"
} ]
}

[sub_resource type="Animation" id=3]
resource_name = "Idle"
length = 2.0
loop = true
step = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.8, 1.2, 1.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "set_animation_done"
} ]
}

[sub_resource type="Animation" id=4]
resource_name = "SendToHell"
length = 1.75
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55, 0.6, 0.65, 0.7, 0.75, 0.8, 0.85, 0.9, 0.95, 1, 1.05, 1.1, 1.15, 1.2, 1.25, 1.3, 1.35, 1.4, 1.45, 1.5, 1.55, 1.6, 1.65, 1.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59, 60, 61 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "set_animation_running"
} ]
}

[sub_resource type="AnimationNodeAnimation" id=5]
animation = "DoorClose"

[sub_resource type="AnimationNodeAnimation" id=6]
animation = "DoorOpen"

[sub_resource type="AnimationNodeAnimation" id=7]
animation = "Idle"

[sub_resource type="AnimationNodeAnimation" id=8]
animation = "SendToHell"

[sub_resource type="AnimationNodeStateMachineTransition" id=9]

[sub_resource type="AnimationNodeStateMachineTransition" id=10]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=11]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=12]

[sub_resource type="AnimationNodeStateMachineTransition" id=13]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachine" id=14]
states/DoorClose/node = SubResource( 5 )
states/DoorClose/position = Vector2( 799, 72 )
states/DoorOpen/node = SubResource( 6 )
states/DoorOpen/position = Vector2( 550, 64 )
states/Idle/node = SubResource( 7 )
states/Idle/position = Vector2( 245, 156 )
states/SendToHell/node = SubResource( 8 )
states/SendToHell/position = Vector2( 558, 252 )
transitions = [ "Idle", "DoorOpen", SubResource( 9 ), "DoorOpen", "DoorClose", SubResource( 10 ), "DoorClose", "Idle", SubResource( 11 ), "Idle", "SendToHell", SubResource( 12 ), "SendToHell", "Idle", SubResource( 13 ) ]
start_node = "Idle"

[sub_resource type="AnimationNodeStateMachinePlayback" id=15]

[node name="Level" type="Node2D"]
script = ExtResource( 1 )

[node name="LevelGraphics" type="Sprite" parent="."]
texture = ExtResource( 4 )
centered = false
vframes = 8
hframes = 8
frame = 27

[node name="StartCountdownTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="JudgementTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="Door" parent="." instance=ExtResource( 2 )]
position = Vector2( 788.756, 168.09 )

[node name="UI" parent="." instance=ExtResource( 3 )]

[node name="DemonLaugh" type="AudioStreamPlayer2D" parent="."]
visible = false
position = Vector2( 180, 320 )
stream = ExtResource( 5 )

[node name="HolyChoir" type="AudioStreamPlayer2D" parent="."]
visible = false
position = Vector2( 180, 320 )
stream = ExtResource( 6 )

[node name="BackgroundMusic" type="AudioStreamPlayer2D" parent="."]
visible = false
position = Vector2( 180, 320 )
stream = ExtResource( 7 )
autoplay = true

[node name="FireSound" type="AudioStreamPlayer2D" parent="."]
visible = false
position = Vector2( 180, 320 )
stream = ExtResource( 8 )

[node name="LevelAnimation" type="AnimationPlayer" parent="."]
root_node = NodePath("../LevelGraphics")
anims/DoorClose = SubResource( 1 )
anims/DoorOpen = SubResource( 2 )
anims/Idle = SubResource( 3 )
anims/SendToHell = SubResource( 4 )

[node name="AnimationTree" type="AnimationTree" parent="LevelAnimation"]
tree_root = SubResource( 14 )
anim_player = NodePath("..")
parameters/playback = SubResource( 15 )
[connection signal="timeout" from="JudgementTimer" to="." method="_send_to_hell"]
